# Cartogram_Maker

./: README.md  pyproject.toml
cart-1.2.2/: cart  interp
cartogram_maker/: canvas_frame.py  cartogram_dialogbox.py  creation_tool.py  edit_data.py  generate.py  main_app.py  point.py  polygon_input_dialog.py  start_frame.py  test_canvas.py  view_frame.py
cartogrampy/: generate.py  test_square.py
cartogrampy/tmp/: points.txt  points_disp.txt
fftw-3.3.10/: Makefile  config.status
fftw-3.3.10/api/: Makefile
fftw-3.3.10/dft/: Makefile
fftw-3.3.10/dft/scalar/: Makefile
fftw-3.3.10/dft/scalar/codelets/: Makefile
fftw-3.3.10/dft/simd/: Makefile
fftw-3.3.10/dft/simd/altivec/: Makefile
fftw-3.3.10/dft/simd/avx/: Makefile
fftw-3.3.10/dft/simd/avx-128-fma/: Makefile
fftw-3.3.10/dft/simd/avx2/: Makefile
fftw-3.3.10/dft/simd/avx2-128/: Makefile
fftw-3.3.10/doc/: Makefile
fftw-3.3.10/doc/FAQ/: Makefile
fftw-3.3.10/genfft/: Makefile
fftw-3.3.10/kernel/: Makefile
fftw-3.3.10/libbench2/: Makefile
fftw-3.3.10/m4/: Makefile
fftw-3.3.10/mpi/: Makefile
fftw-3.3.10/rdft/: Makefile
fftw-3.3.10/rdft/scalar/: Makefile
fftw-3.3.10/rdft/simd/: Makefile
fftw-3.3.10/reodft/: Makefile
fftw-3.3.10/simd-support/: Makefile
fftw-3.3.10/support/: Makefile
fftw-3.3.10/tests/: Makefile
fftw-3.3.10/threads/: Makefile
fftw-3.3.10/tools/: Makefile
projects/: lol2.json  names_added.json  test.json  test2.json  test_again.json  test_cartogram.json  test_class.json  test_with_custom_colors.json  testing_new_dialog.json
(+24 files in other folders)
